tests/src/snapshots/pluma_tests__parse_success__chain_one_line.snap
---
source: tests/src/parse_success.rs
expression: "\"hello\" . f1 () . f2 \"wow\" .f3(47)"
---

=== Source ===
"hello" . f1 () . f2 "wow" .f3(47)

=== Tokens ===
[
    StringLiteral(
        1,
        6,
    ),
    Dot(
        8,
        9,
    ),
    Identifier(
        10,
        12,
    ),
    LeftParen(
        13,
        14,
    ),
    RightParen(
        14,
        15,
    ),
    Dot(
        16,
        17,
    ),
    Identifier(
        18,
        20,
    ),
    StringLiteral(
        22,
        25,
    ),
    Dot(
        27,
        28,
    ),
    Identifier(
        28,
        30,
    ),
    LeftParen(
        30,
        31,
    ),
    DecimalDigits(
        31,
        33,
    ),
    RightParen(
        33,
        34,
    ),
]

=== Comments ===
{}

=== AST ===
ModuleNode {
    pos: (
        1,
        34,
    ),
    body: [
        TopLevelStatementNode {
            pos: (
                1,
                34,
            ),
            kind: Expr(
                ExprNode {
                    pos: (
                        1,
                        34,
                    ),
                    kind: Call(
                        CallNode {
                            pos: (
                                1,
                                34,
                            ),
                            callee: ExprNode {
                                pos: (
                                    1,
                                    30,
                                ),
                                kind: Chain {
                                    receiver: ExprNode {
                                        pos: (
                                            1,
                                            25,
                                        ),
                                        kind: Call(
                                            CallNode {
                                                pos: (
                                                    1,
                                                    25,
                                                ),
                                                callee: ExprNode {
                                                    pos: (
                                                        1,
                                                        20,
                                                    ),
                                                    kind: Chain {
                                                        receiver: ExprNode {
                                                            pos: (
                                                                1,
                                                                15,
                                                            ),
                                                            kind: Call(
                                                                CallNode {
                                                                    pos: (
                                                                        1,
                                                                        15,
                                                                    ),
                                                                    callee: ExprNode {
                                                                        pos: (
                                                                            1,
                                                                            12,
                                                                        ),
                                                                        kind: Chain {
                                                                            receiver: ExprNode {
                                                                                pos: (
                                                                                    1,
                                                                                    6,
                                                                                ),
                                                                                kind: Literal(
                                                                                    LiteralNode {
                                                                                        pos: (
                                                                                            1,
                                                                                            6,
                                                                                        ),
                                                                                        kind: Str(
                                                                                            "hello",
                                                                                        ),
                                                                                        typ: Unknown,
                                                                                    },
                                                                                ),
                                                                                typ: Unknown,
                                                                            },
                                                                            prop: ExprNode {
                                                                                pos: (
                                                                                    10,
                                                                                    12,
                                                                                ),
                                                                                kind: Identifier(
                                                                                    IdentifierNode {
                                                                                        pos: (
                                                                                            10,
                                                                                            12,
                                                                                        ),
                                                                                        name: "f1",
                                                                                    },
                                                                                ),
                                                                                typ: Unknown,
                                                                            },
                                                                        },
                                                                        typ: Unknown,
                                                                    },
                                                                    args: [
                                                                        ExprNode {
                                                                            pos: (
                                                                                13,
                                                                                15,
                                                                            ),
                                                                            kind: EmptyTuple,
                                                                            typ: Unknown,
                                                                        },
                                                                    ],
                                                                    typ: Unknown,
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                        prop: ExprNode {
                                                            pos: (
                                                                18,
                                                                20,
                                                            ),
                                                            kind: Identifier(
                                                                IdentifierNode {
                                                                    pos: (
                                                                        18,
                                                                        20,
                                                                    ),
                                                                    name: "f2",
                                                                },
                                                            ),
                                                            typ: Unknown,
                                                        },
                                                    },
                                                    typ: Unknown,
                                                },
                                                args: [
                                                    ExprNode {
                                                        pos: (
                                                            22,
                                                            25,
                                                        ),
                                                        kind: Literal(
                                                            LiteralNode {
                                                                pos: (
                                                                    22,
                                                                    25,
                                                                ),
                                                                kind: Str(
                                                                    "wow",
                                                                ),
                                                                typ: Unknown,
                                                            },
                                                        ),
                                                        typ: Unknown,
                                                    },
                                                ],
                                                typ: Unknown,
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                    prop: ExprNode {
                                        pos: (
                                            28,
                                            30,
                                        ),
                                        kind: Identifier(
                                            IdentifierNode {
                                                pos: (
                                                    28,
                                                    30,
                                                ),
                                                name: "f3",
                                            },
                                        ),
                                        typ: Unknown,
                                    },
                                },
                                typ: Unknown,
                            },
                            args: [
                                ExprNode {
                                    pos: (
                                        30,
                                        34,
                                    ),
                                    kind: Grouping(
                                        ExprNode {
                                            pos: (
                                                31,
                                                33,
                                            ),
                                            kind: Literal(
                                                LiteralNode {
                                                    pos: (
                                                        31,
                                                        33,
                                                    ),
                                                    kind: IntDecimal(
                                                        47,
                                                    ),
                                                    typ: Unknown,
                                                },
                                            ),
                                            typ: Unknown,
                                        },
                                    ),
                                    typ: Unknown,
                                },
                            ],
                            typ: Unknown,
                        },
                    ),
                    typ: Unknown,
                },
            ),
        },
    ],
}

